--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <<head>
-    <<title>Home</title>
+  <head>
+    <title>A whale of a greeting</title>
   </head>
-  <<body>
+  <body>
     <h1>hello, world</h1>
-    <<p>Call me Ishmael.</p>
+    <p>Call me Ishmael.</p>
   </body>
 </html>
