--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <body>
     <h1>About</h1>
     <p>
-      This site is a sample projet for the <strong>awesome</strong> Git tutorial <em>Learn Enough Git to Be Dangerous</em>.
+      This site is a sample projet for the <strong>awesome</strong> Git tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
     <img src="images/breaching_whale.jpg" />
   </body>
