--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <img src="images/polar_bear.jpg" alt="Polar bear" />
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-      <img src="images/breaching_whale.jpg"/>
+      <img src="images/breaching_whale.jpg" alt="Whale"/>
     </a>
   </body>
 </html>
