--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <a href="index.html">Back to the main page</a>
+    <p>
+
+    </p>
     <title>About Us</title>
     <meta charset="utf-8">
   </head>
